Fixed spacing.

--- a/docker/web/static/style.css
+++ b/docker/web/static/style.css
@@ -2,3 +2,7 @@ p.footer-text {
     color:white;
     font-size: small;
 }
+
+.top-buffer {
+    margin-top:20px;
+}
